--- a/petljadoc/themes/bc_theme/static/petlja-course.css
+++ b/petljadoc/themes/bc_theme/static/petlja-course.css
@@ -1,10 +1,10 @@
-/* Stickey footer */
 html {
 	position: relative;
 	max-height: 100vh;
 	width: 100vw;
 	height: auto;
-	overflow: hidden;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .modal-body {
@@ -260,7 +260,7 @@ ul:first-child {
 }
 
 .quiz-question{
-	border: 1px solid black;
+	border: 1px solid lightgray;
 	padding: 10px;
 	margin-bottom: 10px;
 }
@@ -391,11 +391,9 @@ ul:first-child {
 
 .petljadoc-resources {
 	height: 70px;
-	margin-top: 20px;
-	position: fixed;
+	position: absolute;
 	bottom: 0;
 	left: 0;
-	z-index: 1000;
 	width: 20%;
 	background: #f7f8fa;
 	border-top: 1px solid #dedfe0;
