--- a/petljadoc/runestone_ext/notes/css/notes.css
+++ b/petljadoc/runestone_ext/notes/css/notes.css
@@ -67,33 +67,27 @@
     cursor: pointer;
 }
 
-.learnmorenote-type .course-content > p:first-child::after{
-        font-family: "Font Awesome 5 Free";
-        content: "\f107";
-        display: inline-block;
-        padding-right: 3px;
-        vertical-align: middle;
-        font-weight: 900;
-        float: right;
-    }
-
-.learnmorenote-type .course-content p.expanded:nth-of-type(1)::after {
-    display: none;
-}
-
-.learnmorenote-type .course-content p:nth-of-type(1)::before {
-    font-family: "Font Awesome 5 Free";
-    content: "\f106";
-    display: inline-block;
-    padding-right: 3px;
-    vertical-align: middle;
-    font-weight: 900;
+.toggle-arrow {
     float: right;
-    display: none;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    padding-left: 2px;
+    cursor: pointer;
+    height: 20px;
 }
 
-.learnmorenote-type .course-content p.expanded:nth-of-type(1)::before {
-    display: inline-block;
+.toggle-arrow:focus {
+    outline: 2px solid black;
+    outline-offset: 4px;
+    border-radius: 4px; 
+}
+
+.course-content p.expanded .toggle-arrow {
+    content: "\f106";
+}
+
+.course-content p .toggle-arrow {
+    content: "\f107";
 }
 
 .learnmorenote-type .course-content p:not(:nth-of-type(1)) {
